<resources>
    <string name="app_name">CheckMate</string>
    <string name="start_image">Start Image</string>
    <string name="welcome">Welcome</string>
    <string name="lorem_ipsum">Welcome to CheckMATE! Discover a new way to organize your tasks and activities with ease. With us, your productivity becomes more organized and fun.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hello_please_sign_in_to_continue">Hello, please sign in to continue</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_underlined"><u>Forget Password?</u></string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="profile_logo">Profile Logo</string>
    <string name="set_profile">Set Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="student_number">Student Number</string>
    <string name="send_verification">Send Verification</string>
    <string name="already_have_account">Already have account?</string>
    <string name="button_back">Button Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="information">Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="button_profile">Button Profile</string>
    <string name="hello">Hello,</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="top_performer">Top\nPerformer</string>
    <string name="under_performer">Under\nPerformer</string>
    <string name="check">Check</string>
    <string name="recap">Recap</string>
    <string name="absen">Absen</string>
    <string name="completed_0">Completed 0%</string>
    <string name="mood_recap">Mood recap</string>
    <string name="atribut_recap">Atribut recap</string>
    <string name="absen_recap">Absen recap</string>
    <string name="mood">Mood</string>
    <string name="atribut">Atribut</string>
    <string name="capture">Capture</string>
    <string name="nama">Nama</string>
    <string name="tanggal">Tanggal</string>
    <string name="upload">Upload</string>
    <string name="preview">preview</string>
    <string name="app_logo">app logo</string>
</resources>