<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/start_image"
        android:src="@drawable/cek_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginBottom="49dp"
        android:layout_marginHorizontal="44dp"/>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cp_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginBottom="14dp"
        android:layout_marginHorizontal="31dp"
        android:text="@string/sign_in"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginHorizontal="31dp"
        android:text="@string/sign_up"/>


</LinearLayout>