<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgetpassword.ForgetPasswordActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="60dp"
        android:paddingHorizontal="30dp">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="46dp"
            android:background="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/button_back" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="37dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginBottom="14dp"
            android:text="@string/forget_password"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:text="@string/lorem_ipsum"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:text="@string/email"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/text_input_layout_orange"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:layout_marginBottom="22dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginBottom="35dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/send_verification"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/start_image"
            android:src="@drawable/forget_password_image"
            android:layout_marginBottom="31dp"/>
    </LinearLayout>
</LinearLayout>