<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/baby_blue"
        android:layout_marginBottom="39dp">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="46dp"
            android:background="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <CalendarView
        android:id="@+id/cv_calendar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="28dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginHorizontal="52dp"
        android:text="@string/check"/>
</LinearLayout>