<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teacher.camera.cameraresult.CameraResultActivity"
    android:background="@color/light_blue"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/white"
        android:layout_marginBottom="39dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="21dp"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"
                android:contentDescription="@string/button_profile"
                tools:src="@tools:sample/avatars"/>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_profile"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Zainnn" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="34dp"
        android:text="@string/leaderboard" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="43dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/top_performer"
            android:textAllCaps="true"
            app:cornerRadius="40dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="20dp"
            android:backgroundTint="@color/blue"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_under"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/under_performer"
            android:textAllCaps="true"
            app:cornerRadius="40dp"
            android:layout_marginStart="10dp"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cp_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminate="true"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_leaderboards"
        android:visibility="gone"
        />
</LinearLayout>