<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity"
    android:background="@color/baby_blue">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:layout_marginStart="37dp"
        android:layout_marginTop="145dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="37dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="63dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/welcome_back"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="42dp"
                    android:text="@string/hello_please_sign_in_to_continue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="14dp"
                    android:text="@string/username_or_email"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/text_input_layout_orange"
                    app:startIconDrawable="@drawable/baseline_person_24"
                    android:layout_marginBottom="30dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="14dp"
                    android:text="@string/password"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/text_input_layout_orange"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="57dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/cp_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginBottom="105dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginBottom="105dp"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/sign_in"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7sp"
                        android:text="@string/don_t_have_account"/>
                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/black"
                        android:text="@string/sign_up"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>